_show.scss | fix for too long title with cut title and add …

--- a/app/assets/stylesheets/note-folder/_show.scss
+++ b/app/assets/stylesheets/note-folder/_show.scss
@@ -33,7 +33,12 @@
       &__title{
         font-size: 16px;
         font-weight: bold;
-        color: #4a534a;
+        color: #3e3e3e;
+        // 長い文字列を最後・・・にする
+        width: 300px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
       &__line{
         margin: 3px 7px;
